# bpla-object-detection

./: .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  0.1.56  CMakeLists.txt  MLproject  README.md  conda.yaml  config.yml  data.dvc  dvc.yaml  export_to_onnx.py  filelist.txt  infer_onnx.py  main.cpp  package-lock.json  pyproject.toml  ssh  ssh.pub  test_git.py  train_mlflow.py
.dvc/: config
.github/workflows/: ci.yml
configs/: config.yaml  data.yaml  model.yaml  train.yaml  training.yaml  transforms.yaml  yolo11s.yaml
configs/optimizers/: adamw.yaml
configs/transforms/: transforms.yaml
data/: data.yaml  train.dvc  val.dvc
mlruns/0/: meta.yaml
mlruns/0/0210d4c0f86f4aef8f1ee65a8d8f26e0/: meta.yaml
mlruns/0/0210d4c0f86f4aef8f1ee65a8d8f26e0/tags/: mlflow.runName
mlruns/0/02418b02730a41a7ba28844da16a91b6/: meta.yaml
mlruns/0/02418b02730a41a7ba28844da16a91b6/tags/: mlflow.runName
mlruns/0/0779c502f5db4afc9339d9249b4f8273/: meta.yaml
mlruns/0/0779c502f5db4afc9339d9249b4f8273/tags/: mlflow.runName
mlruns/0/0a99213c49164c8893496c91bb168fd0/: meta.yaml
mlruns/0/24c971fced2244c99ea20aab3917f718/: meta.yaml
mlruns/0/25661de5621345c89bbbda9147ad8218/: meta.yaml
mlruns/0/291fed5223154935b6a5ca31d6038c0a/: meta.yaml
mlruns/0/3011aef81be9449b821e7724b5ef78ae/: meta.yaml
mlruns/0/31018c9c247249bb83ff39339225877d/: meta.yaml
mlruns/0/42bdff9a1b6542dc9ea70e4da6a4b361/: meta.yaml
mlruns/0/4b1e7eac9ca94bc9a0cf0417ddd8e212/: meta.yaml
mlruns/0/599ceec409db481b922e2d39ff7b0280/: meta.yaml
mlruns/0/5efcb8448f0d40cabc427dadb7dbbb7a/: meta.yaml
mlruns/0/5fc0759b586441468600cea1964b3152/: meta.yaml
mlruns/0/7cf1ce2759dc46b096f93296ae0177f1/: meta.yaml
mlruns/0/7d688b4a5aac4145afe5993695f1a581/: meta.yaml
mlruns/0/827154d43311487e8f7ca072590c887c/: meta.yaml
mlruns/0/905fbfcc9492449a8a55594f504a0d7d/: meta.yaml
mlruns/0/9381b88a041f4e14ae871e52b417f170/: meta.yaml
mlruns/0/985a5f61029d4319be133a18efd6874a/: meta.yaml
mlruns/0/990c880f5aa44a528fd2ae4dfea44638/: meta.yaml
mlruns/0/a16bb7a3561246518915a8efae00a650/: meta.yaml
mlruns/0/a82cd5c9415f4698b9620793d224ecca/: meta.yaml
mlruns/0/a89e8c26d4974849b9955cd403c1d4ca/: meta.yaml
mlruns/0/ac1e40e7616343ccadf515efcebb7037/: meta.yaml
mlruns/0/bb3819eef8fa4d1f9acc7867873c3bb4/: meta.yaml
mlruns/0/bc54ae0cda6743a78c5584ed0a6a4d14/: meta.yaml
mlruns/0/d0ba67c73ce648d685759da0a25ea467/: meta.yaml
mlruns/0/d5ad97f93349443e89b7da9cf1230595/: meta.yaml
mlruns/0/dd74fc4aee2b4d87b014423d38a8c467/: meta.yaml
mlruns/0/df5a4f16f6ab45a1857385efda4ba40e/: meta.yaml
mlruns/0/e7da24f9186c41c79b9ef9c214f1db1b/: meta.yaml
mlruns/384810028225824185/: meta.yaml
mlruns/384810028225824185/04f50d99e2ff468eb2457b06b3c9bc20/: meta.yaml
mlruns/384810028225824185/082b805358674a36b0b6fc3ef4b164da/: meta.yaml
mlruns/384810028225824185/140802965b4f4cf3862a287321c51db1/: meta.yaml
mlruns/384810028225824185/15132868854f4dce939818198e57ee3d/: meta.yaml
mlruns/384810028225824185/1fe0cc53efc24b7fa2c2e5c813ae3a7d/: meta.yaml
mlruns/384810028225824185/262fcf8dddfe416ea7551f1aad57b2b9/: meta.yaml
mlruns/384810028225824185/3b0d1bceb75d4725a7c8f788c10247af/: meta.yaml
mlruns/384810028225824185/4ac948d07d94483792a41ee3941af6e0/: meta.yaml
mlruns/384810028225824185/59c49d4789b2446db8acc788f3f2ad81/: meta.yaml
mlruns/384810028225824185/61517217d5bc4aabad94e93acb48daf0/: meta.yaml
mlruns/384810028225824185/954ca25ef58040989ef7b59a33362834/: meta.yaml
mlruns/384810028225824185/9595e6fcf14749138609e1796e846a85/: meta.yaml
mlruns/384810028225824185/a34561fe343043fc96fbe7b4aa8479b4/: meta.yaml
mlruns/384810028225824185/b26ddbbb3d4c42d7a961ab1f5e220dca/: meta.yaml
mlruns/384810028225824185/c0c16b4b484941af93a501332a7f194e/: meta.yaml
mlruns/384810028225824185/c6d1cbcac4d6432e97a5cfb58c9ad007/: meta.yaml
mlruns/384810028225824185/d8ec587db97248479cd57277facf5164/: meta.yaml
mlruns/384810028225824185/e5af3cc8e8134b8fbd87c4eb4a9f0e11/: meta.yaml
mlruns/384810028225824185/f264564a962a4a4281385ab5f74043a2/: meta.yaml
onnx_models/: model_7cf1ce2759dc46b096f93296ae0177f1.onnx
scripts/: build_engine.py  build_engine.sh  run_inference.py
src/: convert.py  export.py  export_all.py  export_trt.py  infer.py  predict.py  predict.yaml  serve.py  train.py
src/data/: dataset.py
src/utils/: logger.py  plot_metrics.py  utils.py
tests/: test_api.py  test_cli_infer.py  test_dataloader.py  test_export.py  test_infer.py  test_model.py  test_utils.py
(+79 files in other folders)
