[tool.poetry]
name = "bpla-object-detection"
version = "0.1.0"
description = "Automatic prompting for UAV object detection with YOLOv8 and MLOps tools"
authors = ["Mikholap VV <mikholap.vv@phystech.edu>"]
license = "MIT"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
torch = "^2.0.0"
ultralytics = "^8.0.0"
hydra-core = "^1.3.0"
dvc = "^3.0.0"
fire = "^0.7.0"
mlflow = "^2.12.1"
pandas = "^2.0.0"
matplotlib = "^3.8.0"
onnxruntime = "^1.22.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0"
flake8 = "^6.0"
isort = "^5.12.0"
pre-commit = "^3.0"
pytest = "^8.4.0"
onnx = "^1.18.0"
onnxruntime = "^1.22.0"
dvc = {extras = ["gdrive"], version = "^3.60.0"}
pydrive2 = "^1.21.3"
cryptography = "41.0.7"
pyopenssl = "23.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
